--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "axios": "^0.21.0",
     "better-scroll": "^2.0.6",
     "core-js": "^3.6.5",
+    "postcss-px-to-viewport": "^1.1.1",
+    "postcss-pxtorem": "^5.1.1",
     "vue": "^2.6.2",
     "vue-router": "^3.0.1",
     "vue-template-compiler": "^2.6.12"
